--- a/css/style.css
+++ b/css/style.css
@@ -109,3 +109,13 @@ img {
 .group{
     padding-top: 20px;
 }
+
+.contents-img{
+    padding-top: 20px;
+    text-align: center;
+}
+.contents-title{
+    padding-top: 20px;
+    font-size: 14px;
+    text-align: center;
+}
