--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ li.card{
     box-shadow: 0 20px 20px rgba(0,0,0,.1);
     transition: all 250ms cubic-bezier(.02, .01, .47, 1);
 }
-img {
+.card-img {
     width: 100%;
     vertical-align: top;
 }
