--- a/css/style.css
+++ b/css/style.css
@@ -109,13 +109,17 @@ li.card{
 .group{
     padding-top: 20px;
 }
-
-.contents-img{
-    padding-top: 20px;
+.contents-list{
     text-align: center;
+    max-width: 1185px;
+}
+.contents-detail{
+    padding-top: 20px;
+    width: 100%;
+    display: inline-block;
 }
 .contents-title{
-    padding-top: 20px;
+    padding: 50px;
     font-size: 14px;
     text-align: center;
 }
